@@ -11,7 +11,7 @@ bin_PROGRAMS      = feh
 feh_SOURCES       = main.c main.h getopt.c getopt1.c getopt.h feh.h options.c \
 winwidget.c winwidget.h \
 filelist.c multiwindow.c montage.c imlib.c index.c slideshow.c \
-utils.c utils.h keyevents.c timers.c list.c 
+utils.c utils.h keyevents.c timers.c list.c collage.c
 feh_LDADD         = -lX11 -lImlib2
 
 test:
