@@ -1,0 +1,12 @@
+#!/bin/bash
+[ -x ./feh ] && {
+FEH="./feh"
+} || {
+FEH="feh"
+}
+echo ""
+echo "This test should create a collage."
+echo "The thumbnails should be 120x120 and retain aspect ratio"
+echo ""
+$FEH $1 -gVo _test04.jpg --thumb-width 120 --thumb-height 120 --limit-width 800 --limit-height 600 testimages
+echo ""
