@@ -1,3 +1,9 @@
+Wed Apr 19 19:42:45 2000  Tom Gilbert  <gilbertt@btinternet.com>
+
+	* Added -g, --collage. Collage mode is like montage mode, except
+	the image thumbnails are distributed randomly. Run test26 for an
+	example.
+
 Tue Apr 11 18:20:21 2000  Tom Gilbert  <gilbertt@btinternet.com>
 
 	* Make included getopt actually work if needed :)
